--- a/assets/css/templatemo-eduwell-style.css
+++ b/assets/css/templatemo-eduwell-style.css
@@ -616,6 +616,11 @@ header
   .header-area .logo {
     margin-left: 30px;
   }
+  @media (max-width: 768px) {
+    .header-area .logo {
+      margin-left: 0;
+    }
+  }
   .header-area .menu-trigger {
     display: block !important;
   }
@@ -1342,6 +1347,11 @@ section.contact-us #contactForm1 {
   padding: 40px;
 }
 
+@media (max-width: 768px) {
+  section.contact-us #contactForm1 {
+    margin-left: 0px;
+  }
+}
 section.contact-us #contactForm1 input {
   width: 100%;
   height: 40px;
